[project]
name = "Rules"
version = "0.0.0"
description = ""
authors = [
    {name = "xkww3n", email = "xkww3n@outlook.com"},
]
dependencies = [
    "pytest~=8.1",
    "requests~=2.31",
    "python-abp>=0.2.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.poe.tasks]
build = "python main.py"
test = "pytest"
profile = "python -m cProfile -o performance.prof main.py"

[tool.poe.tasks.debug]
cmd = "python main.py"
env = {DEBUG = "1"}

[dependency-groups]
dev = [
    "poethepoet>=0.42.1",
]
